[package]
name = "ramp"
description = "A high-performance multiple-precision arithmetic library"
version = "0.7.0"
authors = [
    "James Miller <james@aatch.net>",
    "Michael Rosenberg <micro@fastmail.com>"
]
build = "build.rs"
license = "Apache-2.0"
readme = "README.md"
keywords = ["bignum", "math", "number"]
repository = "https://github.com/Aatch/ramp"
documentation = "https://docs.rs/ramp"

[lib]
name = "ramp"
path = "src/lib.rs"

[features]
unstable = [] # To keep travis-cargo happy
fallbacks = []
asm = []
full-quickcheck = []
floats = ["ieee754"]

[dependencies]
ieee754 = { version = "0.2", optional = true }
rand = { version = "0.8.5", default-features = false }
hamming = "0.1"
num-traits = { git = "https://github.com/scrtlabs/num-traits", rev = "41a7b37b3a9bb62f1586406075da6c6e71d3b163", default-features = false }
num-integer = { git = "https://github.com/scrtlabs/num-integer", rev = "b47fd61e227c3eb1b5c96c89f91046fc041b8530", default-features = false }
rust-gmp = { version = "0.5", optional = true }

[build-dependencies]
num-bigint = "0.4"
rustc-cfg = "0.4"
cc = "1.0"

[dev-dependencies]
num-bigint = "0.4"
quickcheck = "0.6"
